# openpaper-mcp

./: README.md  pyproject.toml  server.json  server.py  smithery.yaml
.github/workflows/: publish.yml
