[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openpaper-mcp"
version = "0.1.0"
description = "MCP server for OpenPaper - generate academic papers with verified citations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
openpaper-mcp = "server:main"

[project.urls]
Homepage = "https://openpaper.dev"
Repository = "https://github.com/federicodeponte/openpaper-mcp"
